--- a/a/main.css
+++ b/a/main.css
@@ -28,11 +28,13 @@ body {
 .sumar { margin-top: 4px }
 .umar { margin-top: 6px }
 .bumar { margin-top: 8px }
+.mar { margin: 6px }
 .lmar, #content { margin-bottom: 6px }
 .rmar { margin-right: 6px }
 .smar, .error { margin-bottom: 6px }
 .lmar { margin-left: 6px }
 .pad, #content, #footer, .error { padding: 6px }
+.spad { padding: 3px }
 .scrl { overflow: auto }
 .scrlx { overflow-x: auto }
 .scrly { overflow-y: auto }
