--- a/a/main.css
+++ b/a/main.css
@@ -20,22 +20,23 @@ body {
 	max-height: 100%; max-width: 100%;
 	padding: 4px 6px 2px;
 }
-.lft { float: left }
+.lft, .row > * { float: left }
 .rit { float: right }
 .mar { margin: 6px }
 .sumar:not(:first-child) { margin-top: 4px }
-.umar:not(:first-child) { margin-top: 6px }
+.umar:not(:first-child), *:not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child) { margin-top: 6px }
 .bumar:not(:first-child) { margin-top: 8px }
 .mar { margin: 6px }
 .lmar, #content { margin-bottom: 6px }
 .rmar { margin-right: 6px }
 .smar, .error { margin-bottom: 6px }
 .lmar { margin-left: 6px }
-.pad, #content, #footer, .error { padding: 6px }
+.pad, .desc, #content, #footer, .error { padding: 6px }
 .spad { padding: 3px }
 .scrl { overflow: auto }
 .scrlx { overflow-x: auto }
 .scrly { overflow-y: auto }
+.br, .desc { border-radius: 4px }
 .hglt, section, article, blockquote { background: rgba(255, 255, 255, 0.4) }
 h3, section h2, article h2, section section h1, section article h1, article section h1, article article h1 {
 	margin-top: 0.5em;
@@ -68,7 +69,7 @@ h2, section h1, article h1 {
 	line-height: 1.5;
 }
 .pre { white-space: pre-wrap }
-.clear, .clearfix::after, nav::after {
+.clear, .clearfix::after, nav::after, .row::after {
 	display: block;
 	clear: both;
 	content: '';
@@ -77,7 +78,9 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 2px 0px;
 }
 h1 {
-	margin-top: 2px; margin-bottom: 0.4em;
+	margin-top: 2px;
+	margin-bottom: 0.3em;
+	border-bottom: 1px solid #aaa;
 	font-size: 1.5em;
 }
 a, .ctrl {
