--- a/a/main.css
+++ b/a/main.css
@@ -23,6 +23,7 @@ body {
 .lft, .row > * { float: left }
 .rit { float: right }
 .mar { margin: 6px }
+.no-mar-top, .pad *:first-child, .desc *:first-child { margin-top: -2px }
 .sumar:not(:first-child) { margin-top: 4px }
 .umar:not(:first-child), *:not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child) { margin-top: 6px }
 .bumar:not(:first-child) { margin-top: 8px }
@@ -80,9 +81,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: Verdana;
 	font-weight: normal;
 }
-h1 *, h2 *, h3 *, h4 *, h5 *, h6 * {
-	font-weight: inherit !important;
-}
+h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit !important }
 h1 {
 	margin-top: 2px;
 	margin-bottom: 0.3em;
