--- a/a/main.css
+++ b/a/main.css
@@ -23,7 +23,7 @@ body {
 .mar { margin: 6px }
 .tumar { margin-top: 2px }
 .sumar, :not(img) + .desc { margin-top: 4px }
-.umar, :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child) { margin-top: 6px }
+.umar, :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), .row:not(:first-child) { margin-top: 6px }
 .bumar, h1:not(:first-child) { margin-top: 8px }
 .mar { margin: 6px }
 .lmar, #content { margin-bottom: 6px }
@@ -39,8 +39,11 @@ body {
 .br, .desc { border-radius: 4px }
 .hglt, .desc, section, article, blockquote { background: rgba(255, 255, 255, 0.4) }
 .shglt, #content, #aside, #footer { background: rgba(255, 255, 255, 0.7) }
-.grey, .c-sig { color: #555 }
-small, footer, .c-sig { font-size: 0.85em }
+.grey, a.small, .c-sig { color: #555 }
+small, a.small, footer, .c-sig {
+	font-size: 0.85em;
+	font-weight: normal;
+}
 h3, section h2, article h2, section section h1, section article h1, article section h1, article article h1 {
 	margin-top: 0.5em;
 	font-size: 1em;
@@ -67,7 +70,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit !important }
 h1 {
-	margin-bottom: 0.3em;
+	margin-bottom: 0.2em;
 	border-bottom: 1px solid #aaa;
 	font-size: 1.5em;
 	line-height: 1;
