--- a/a/main.css
+++ b/a/main.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: Verdana;
 	font-weight: normal;
 }
-h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit !important }
+h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit }
 h1 {
 	margin-bottom: 0.2em;
 	border-bottom: 1px solid #aaa;
