--- a/a/main.css
+++ b/a/main.css
@@ -22,7 +22,7 @@ body {
 *:first-child { margin-top: 0 }
 .mar { margin: 6px }
 .tumar { margin-top: 2px }
-.sumar:not(:first-child), :not(img) + .desc { margin-top: 4px }
+.sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
 .umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child) { margin-top: 6px }
 .bumar:not(:first-child), h1:not(:first-child) { margin-top: 8px }
 .lmar, #content { margin-bottom: 6px }
@@ -47,7 +47,7 @@ h2, section h1, article h1 {
 	margin-top: 0.8em; margin-bottom: 0.3em;
 	font-size: 1.3em;
 }
-ul, p { margin: 6px 0 0 0 }
+ul, p { margin: 6px 0 2px 0 }
 .error { background: #f00 }
 .white, .error { color: #fff }
 .center { margin: 0 auto }
@@ -59,11 +59,10 @@ ul, p { margin: 6px 0 0 0 }
 	content: '';
 }
 h1, h2, h3, h4, h5, h6 {
-	margin: 2px 0px;
 	font-family: Verdana;
 	font-weight: normal;
 }
-h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit !important }
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit }
 h1 {
 	margin-bottom: 0.3em;
 	border-bottom: 1px solid #aaa;
@@ -72,6 +71,10 @@ h1 {
 	padding-bottom: 1px;
 	vertical-align: bottom;
 }
+h2, article h1, section h1 {
+	font-size: 1.3em;
+}
+hr { border-bottom: none }
 a, .ctrl {
 	color: #000;
 	font-weight: bold;
@@ -81,11 +84,12 @@ a, .ctrl {
 }
 a:active, .ctrl:active { color: #02d }
 a:hover, .ctrl:hover { color: #15f }
-input[type=text], input[type=password] {
+input[type=text], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: 0.8em;
 	height: 1.8em;
 }
+textarea { font-size: 0.9em }
 #nav {
 	padding: 0 2px 6px 2px;
 	font-size: 0;
