--- a/learn/course.css
+++ b/learn/course.css
@@ -44,16 +44,14 @@ h2 {
 		margin-right: 8px;
 	}
 	#html, #output {
-		width: calc(50% - 8px);
+		width: calc(50% - 4px);
 	}
 	#output {
 		margin-left: 8px;
 	}
 }
 @media screen and (min-width: 1200px) {
-	#text, #html, #output {
-		height: 90vh;
-	}
+	#content > .row, #text, #html, #output { height: 100% }
 	#text {
 		width: 400px;
 		margin-right: 0;
@@ -87,10 +85,12 @@ h2 {
 	max-width: 400px;
 	font-size: 18px;
 	padding: 4px 8px;
-	margin: 0;
 	background: rgba(0, 220, 0, 0.6);
 	box-shadow: none;
 	transition: background-color 0.4s;
+	border: none;
+	box-shadow: 1px 1px 2px #444;
+	margin-bottom: 12px;
 }
 #check:hover {
 	background: rgba(80, 220, 80, 0.6);
@@ -100,18 +100,20 @@ h2 {
 	background: rgba(0, 200, 0, 0.6);
 }
 #passed, #failed {
+	display: none;
 	margin-top: 4px;
 	position: absolute;
 	width: 100%;
-	transition: transform 0.3s;
-	-webkit-transition: -webkit-transform 0.3s;
 	padding: 4px;
 	transform-origin: top;
 	-webkit-transform-origin: top;
 	transform: scaleY(0);
 	-webkit-transform: scaleY(0);
+	transition: transform 0.3s;
+	-webkit-transition: -webkit-transform 0.3s;
 }
 #passed.show, #failed.show {
+	display: block;
 	transform: none;
 	-webkit-transform: none;
 	position: static;
