--- a/a/main.css
+++ b/a/main.css
@@ -241,9 +241,10 @@ textarea {
 		background: #181818;
 	}
 	#nav > :nth-child(6) { margin-top: 16px }
-	#nav > * {
+	#nav > *, #nav form {
 		width: 100%;
 		padding-left: 16px;
+		padding-right: 24px;
 	}
 	#nav > ::after {
 		position: absolute;
@@ -252,4 +253,5 @@ textarea {
 		color: #999;
 	}
 	#logo { height: 2rem }
+	#nav input { width: 100% }
 }
