--- a/a/main.css
+++ b/a/main.css
@@ -34,7 +34,7 @@ body {
 .maxwidth, img { max-width: 100% }
 .lft, .row > * { float: left }
 .rit, .c-sig { float: right }
-:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article) > :first-child { margin-top: 0 }
+:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
 .mar { margin: 6px }
 .nomar, body, input { margin: 0 }
 .tumar, h1 + *, h2 + *, h3 + *, form * { margin-top: 2px }
@@ -113,8 +113,9 @@ a, .ctrl {
 	transition: color 0.2s;
 	cursor: pointer;
 }
-a:active, .ctrl:active { color: #02d }
 a:hover, .ctrl:hover { color: #15f }
+a:active, .ctrl:active { color: #02d }
+a.blk:hover { background: rgba(255, 255, 255, 0.2) }
 input[type=text], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: 0.8em;
@@ -129,7 +130,7 @@ textarea {
 	text-align: top;
 	background: #000;
 }
-#nav > * {
+#nav * {
 	padding: 0 4px;
 	color: #ddd;
 	font-weight: normal;
@@ -143,10 +144,14 @@ textarea {
 	line-height: 0;
 	max-width: 100%;
 }
+#nav form {
+	padding: 4px 0;
+}
 #nav input {
 	width: 160px;
 	max-width: 100%;
 	font-size: 0.9rem;
+	color: #000;
 }
 #logo img {
 	max-height: 100%;
@@ -154,26 +159,38 @@ textarea {
 }
 #nav form { line-height: 1 }
 #content { padding-bottom: 24px }
-@media screen and (min-width: 350px) and (max-width: 440px) { 
-	#nav a:nth-child(5)::after, #nav a:nth-last-child(2)::after {
-		white-space: pre;
-		content: '\a';
-	}
+#nav > .active:nth-child(3) { position: relative }
+#nav > .active:nth-child(3)::before {
+	content: '';
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	background: #000;
+	transform: rotate(45deg);
+	-webkit-transform: scale(1, 0.6) rotate(45deg);
+	border-top: 2px solid #fff;
+	border-left: 2px solid #fff;
+	top: 100%;
+	margin-top: -1px;
+	left: 50%;
+	margin-left: -5px;
 }
-@media screen and (min-width: 460px) and (max-width: 800px) { 
-	#nav a:nth-child(5) { border-right: 1px solid #aaa }
+#nav :not(.active) + nav { display: none }
+#nav .active + nav {
+	margin: 2px 0 6px;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	display: block;
+	background: #000;
 }
-@media screen and (min-width: 700px) and (max-width: 800px) { 
+@media screen and (min-width: 360px) and (max-width: 800px) { 
+	#nav a:nth-child(6) { border-right: 1px solid #aaa }
+}
+@media screen and (max-width: 800px) { 
 	#nav input { transition: width 1s }
 }
 @media screen and (max-width: 610px), (min-width: 750px) { 
 	#nav input { width: 184px }
-}
-@media screen and (max-width: 610px) { 
-	#nav form {
-		display: block;
-		padding: 4px 0;
-	}
 }
 @media screen and (min-width: 700px) {
 	.half {
@@ -181,7 +198,7 @@ textarea {
 		margin-right: 1%;
 	}
 }
-@media screen and (min-width: 350px) { 
+@media screen and (min-width: 360px) { 
 	#nav {
 		padding: 4px 4px 0 0;
 		text-align: right;
@@ -191,6 +208,9 @@ textarea {
 		width: 144px;
 		margin: -4px 4px 0 -4px;
 	}
+	#nav .active + nav {
+		display: inline-block;
+	}
 	line {
 		display: inline-block;
 		width: 1px; height: 1.2em;
@@ -198,15 +218,21 @@ textarea {
 		vertical-align: sub;
 	}
 }
+@media screen and (min-width: 360px) and (max-width: 799px) {
+	#nav > .active:nth-child(3)::after, #nav > .active + nav + *::before {
+		white-space: pre;
+		content: '\a';
+	}
+}
 @media screen and (min-width: 800px) {
 	#nav {
 		padding: 0;
 		background: #111;
 	}
-	#nav > a:active { background: #000 }
-	#nav > a:hover { transition: background 0.2s }
+	#nav > a { transition: background 0.15s }
 	#nav > a:hover { background: #262626 }
-	#nav > *, #nav form {
+	#nav > a:active, #nav > a.active { background: #000 }
+	#nav > :not(div), #nav form {
 		display: inline-block;
 		padding: 0 12px;
 		background: #1a1a1a;
@@ -229,10 +255,20 @@ textarea {
 }
 @media screen and (min-width: 800px) and (max-width: 1499px) { 
 	#cont { margin: 0 auto }
-	#nav { height: 2rem }
+	#logo { height: 2rem }
 	#nav > :nth-child(-n+5) { float: left }
 	#nav > :nth-child(6) { border-left: 1px solid #444 }
 	#nav > a:not(#logo) { border-right: 1px solid #444 }
+	#nav .active + nav {
+		position: absolute;
+		top: calc(2rem + 3px);
+		left: 7rem;
+		border-bottom: none;
+	}
+	#nav .active ~ div {
+		height: calc(2rem + 6px);
+	}
+	#nav > .active:nth-child(3)::before { z-index: 1 }
 }
 @media screen and (min-width: 1500px) { 
 	#cont { overflow: hidden }
@@ -240,18 +276,19 @@ textarea {
 	#content, #footer { margin: 6px 6px 6px calc(4% + 152px) }
 	#nav {
 		position: fixed;
+		display: table;
 		left: 0;
 		width: calc(4% + 144px); height: 200px;
 		text-align: left;
 		background: #181818;
 	}
-	#nav > :nth-child(6) { margin-top: 16px }
+	#nav > :nth-child(7) { margin-top: 16px }
 	#nav > *, #nav form {
 		width: 100%;
 		padding-left: 16px;
 		padding-right: 24px;
 	}
-	#nav > ::after {
+	#nav > :not(nav):not(div)::after {
 		position: absolute;
 		right: 0.5em;
 		content: '\276F';
@@ -259,4 +296,19 @@ textarea {
 	}
 	#logo { height: 2rem }
 	#nav input { width: 100% }
+	#nav > .active:nth-child(3)::before {
+		left: 32px;
+		margin-top: -4px;
+	}
+	#nav > .active { position: relative }
+	#nav > .active::before {
+		content: '';
+		display: block;
+		position: absolute;
+		left: 5px;
+		top: 3px;
+		bottom: 3px;
+		width: 3px;
+		background: #777;
+	}
 }
