Improved active algorithm, added blank pages

--- a/a/main.css
+++ b/a/main.css
@@ -185,7 +185,7 @@ textarea {
 	background: #000;
 }
 @media screen and (min-width: 360px) and (max-width: 800px) { 
-	#nav a:nth-child(6) { border-right: 1px solid #aaa }
+	#nav > a:nth-child(6) { border-right: 1px solid #aaa }
 }
 @media screen and (max-width: 800px) { 
 	#nav input { transition: width 1s }
@@ -233,6 +233,11 @@ textarea {
 	#nav > a { transition: background 0.15s }
 	#nav > a:hover { background: #262626 }
 	#nav > a:active, #nav > a.active:not(:hover) { background: #000 }
+	#nav nav > a {
+		display: inline-block;
+		line-height: 1.5;
+	}
+	#nav nav > a.active { background: #444 }
 	#nav > :not(div), #nav form {
 		display: inline-block;
 		padding: 0 12px;
