--- a/a/main.css
+++ b/a/main.css
@@ -34,6 +34,7 @@ body {
 .maxwidth, img { max-width: 100% }
 .lft, .row > * { float: left }
 .rit, .c-sig { float: right }
+.nofloat, .half { float: none }
 :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
 .mar { margin: 6px }
 .nomar, body, input { margin: 0 }
@@ -195,9 +196,11 @@ textarea {
 }
 @media screen and (min-width: 700px) {
 	.half {
+		float: left;
 		width: 49%;
 		margin-right: 1%;
 	}
+	.half.rit { float: right }
 }
 @media screen and (min-width: 360px) { 
 	#nav {
