--- a/a/main.css
+++ b/a/main.css
@@ -65,7 +65,7 @@ small, a.small, footer, .c-sig {
 h1 small {
 	float: right;
 	font-size: .65em;
-	margin-top: .5em;
+	margin: .5em;
 }
 .popup {
 	position: absolute;
