--- a/a/main.css
+++ b/a/main.css
@@ -58,7 +58,6 @@ body {
 .grey, a.small, .c-sig { color: #555 }
 .large { font-size: 1.2em }
 input[type=text].large, input[type=password].large { font-size: 1.3em }
-.row-ib { vertical-align: top }
 small, a.small, footer, .c-sig {
 	font-size: .85em;
 	font-weight: normal;
@@ -79,12 +78,17 @@ h2 small { margin: .2em .2em 0 0 }
 	display: inline-block;
 	max-width: 95%;
 }
-.program iframe {
+.program div {
 	width: 600px;
 	max-width: 100%;
 	max-height: 400px;
 	height: 28vw;
 	min-height: 180px;
+	overflow: auto;
+}
+.program iframe {
+	width: 100%;
+	height: 100%;
 }
 .program:nth-child(n+5) { display: none }
 @media (min-width: 500px) {
@@ -97,12 +101,12 @@ h2 small { margin: .2em .2em 0 0 }
 }
 @media (min-width: 1300px) {
 	.program { max-width: calc(25% - 4px) }
-	.program iframe { height: 20vw }
+	.program div { height: 20vw }
 	.program:nth-child(-n+12) { display: inline-block }
 }
 @media (min-width: 1700px) {
 	.program { max-width: calc(20% - 4px) }
-	.program iframe { height: 16vw }
+	.program div { height: 16vw }
 	.program:nth-child(-n+15) { display: inline-block }
 }
 ul, p { margin: 6px 0 2px 0 }
