--- a/a/main.css
+++ b/a/main.css
@@ -88,7 +88,7 @@ h2 small { margin: .2em .2em 0 0 }
 }
 .program iframe {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 4px);
 }
 .program:nth-child(n+5) { display: none }
 @media (min-width: 500px) {
