Glowing nav text on hover

--- a/a/main.css
+++ b/a/main.css
@@ -273,7 +273,10 @@ textarea {
 		background: #111;
 	}
 	#nav > a { transition: background .15s }
-	#nav > a:hover { background: #262626 }
+	#nav a:hover {
+		background: #262626;
+		color: #fff;
+	}
 	#nav > a:active, #nav > a.active:not(:hover) { background: #000 }
 	#nav nav > a {
 		display: inline-block;
