--- a/a/main.css
+++ b/a/main.css
@@ -32,7 +32,7 @@ body {
 .ib, #logo { display: inline-block }
 .fullwidth { width: 100% }
 .maxwidth, img { max-width: 100% }
-.lft, .row > :not(.rit):not(.half):not(.program) { float: left }
+.lft, .row > :not(.rit):not(.half):not(.program), .user > * { float: left }
 .rit, .c-sig { float: right }
 .nofloat { float: none }
 :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
@@ -73,6 +73,22 @@ h2 small { margin: .2em .2em 0 0 }
 	top: 20%; right: 20%; left: 20%;
 	background: rgba(240, 240, 240, .95);
 	box-shadow: 1px 1px 8px #000;
+}
+.user {
+	 background: #9ef;
+	 color: #000;
+	 min-width: 140px;
+	 display: inline-block;
+	 padding: 4px 8px 4px 4px;
+	 margin-left: 8px;
+	 float: right;
+	 text-align: left;
+}
+.user div {
+	margin-left: 4px;
+}
+.user a {
+	display: block;
 }
 .program {
 	display: inline-block;
@@ -115,7 +131,7 @@ ul, p { margin: 6px 0 2px 0 }
 .center { margin: 0 auto }
 .center-text, #footer, #nav { text-align: center }
 .pre { white-space: pre-wrap }
-.clear, .clearfix::after, nav::after, .row::after {
+.clear, .clearfix::after, nav::after, .row::after, .user::after {
 	content: '';
 	display: block;
 	clear: both;
