Fixed Safari bug where autofocus didn't work

--- a/a/main.css
+++ b/a/main.css
@@ -181,6 +181,11 @@ textarea {
 	font-size: .9em;
 	display: block;
 }
+#err > * {
+	 text-align: center;
+	 margin: 12em 3em;
+	 color: #fff;
+}
 #nav {
 	padding: 0 2px 6px 2px;
 	font-size: 0;
