--- a/a/main.css
+++ b/a/main.css
@@ -152,10 +152,10 @@ h1 {
 	padding-bottom: 1px;
 	vertical-align: bottom;
 }
-h2, h1.title, section h1, article h1 {
+h2, h1.title, article h1 {
 	font-size: 1.3em;
 }
-h3, h2.title, section h2, article h2, section section h1, section article h1, article section h1, article article h1 {
+h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
 	font-size: 1em;
 }
